--- a/site/css/site.css
+++ b/site/css/site.css
@@ -66,12 +66,12 @@ p.inset {
 	padding-right: 40px;
 }
 
+/* primary content area */
+
 #content {
 	min-width: 800px;
 	min-height: 400px;
 }
-
-/* primary content area */
 
 .center-content-wrapper {
 	position: absolute;
@@ -130,7 +130,7 @@ p.inset {
 }
 
 /* these classes control the page tab contents, depending on which one */
-.tab-content-left, .tab-content-right, .tab-content-center {
+.tab-content-left, .tab-content-right, .tab-content-center, .tab-content-full {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -152,6 +152,14 @@ p.inset {
 
 .tab-content-center {
 	margin: 0 auto;
+}
+
+.tab-content-full {
+	left: 0;
+	right: 0;
+	background: rgba(255, 255, 255, 1);
+	color: #000;
+	width: auto;
 }
 
 /* trying to space out vimeo embeds */
@@ -209,11 +217,11 @@ div#tab-motion iframe {
 }
 
 .footer-icon {
-	height: 20px;
-	width: 20px;
+	height: 18px;
+	width: 18px;
 	margin-right: 3px;
 }
 
 #copyright-notice {
-	/*font-style: italic;*/
+	font-style: italic;
 }
