images added starting slider implementation

--- a/site/css/site.css
+++ b/site/css/site.css
@@ -162,6 +162,10 @@ p.inset {
 	width: auto;
 }
 
+.tab-content-bordered {
+	border:1px solid black;
+}
+
 /* trying to space out vimeo embeds */
 div#tab-motion iframe {
 	margin-bottom: 30px;
