--- a/site/css/site.css
+++ b/site/css/site.css
@@ -251,3 +251,14 @@ div#tab-motion iframe {
 .slick-container .slick-slide > * {
 	padding: 10px;
 }
+
+/* image galleries */
+
+.image-gallery a {
+	display: inline-block;
+	padding: 10px;
+}
+
+.image-gallery a img {
+	width: 200px;
+}
