--- a/site/css/site.css
+++ b/site/css/site.css
@@ -20,7 +20,6 @@ h3 {
 }
 
 hr {
-	/*border-top-color: #AAA;*/
 	margin-top: 0px;
 	margin-bottom: 25px;
 }
@@ -36,7 +35,6 @@ p.inset {
 }
 
 /* using position fixed to get a full width container element */
-
 .fixed-container {
 	position: fixed;
 	top: 0px;
@@ -157,14 +155,9 @@ p.inset {
 .tab-content-full {
 	left: 0;
 	right: 0;
-	background: rgba(255, 255, 255, 1);
+	background: rgba(238, 238, 238, 1);
 	color: #000;
 	width: auto;
-}
-
-.tab-content-bordered {
-	/*border:1px solid black;*/
-	background-color: #EEE;
 }
 
 /* trying to space out vimeo embeds */
@@ -233,45 +226,65 @@ div#tab-motion iframe {
 
 #photography-menu {
 	list-style-type: none;
-	/*float: left;*/
 	text-align: center;
 	padding: 0;
 	margin: 0;
+    margin-bottom: 20px;
 }
 
 #photography-menu li {
-	
-	/*float:none;*/
+	text-align: left;
 	display:inline-block;
-	/*color: #000;*/
-	/*background-color: #FFF;*/
 	padding: 5px;
-	/*padding-top: 8px;*/
-	font-size: 16px;
-	text-transform: uppercase;
+	font-size: 26px;
+	font-variant:small-caps;
+    border-collapse: collapse;
+    width: 120px;
 }
 
 #photography-menu li:first-child {
 	border-right: 1px dotted black;
+    text-align: right;
 }
 
 
 #photography-menu li.ui-tabs-active a {
 	color: #000;
+    text-transform: uppercase;
 }
 
-/*
-#photography-menu li.ui-tabs-active a {
-	color: #FFF;
-}*/
-
-/* image galleries */
+.image-gallery {
+    min-width: 670px; /* 3 wide */
+    max-width: 1120px; /* 5 wide */
+    width: 70%;
+    margin: 0 auto;
+}
 
 .image-gallery a {
 	display: inline-block;
-	padding: 10px;
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
 }
 
 .image-gallery a img {
-	width: 200px;
+    width:100%;
+    height: auto;
+    margin-top: -25%;
 }
+
+.image-gallery a img.wide {
+    width:auto;
+    height: 100%;
+    margin-top: 0;
+    margin-left: -25%;
+}
+
+.motion-embeds-container {
+    width: 760px;
+    margin: 0 auto;
+}
+
