--- a/site/css/site.css
+++ b/site/css/site.css
@@ -53,7 +53,7 @@ p.inset {
 
 .centered {
 	left: 50%;
-	transform: translate(-50%, 0);	
+	transform: translate(-50%, 0);
 }
 
 .header, .footer {
@@ -268,6 +268,7 @@ div#tab-motion iframe {
     margin-right: 20px;
     margin-bottom: 20px;
     border-radius: 20px;
+		background-color: #BBB;
 }
 
 .image-gallery a img {
@@ -287,4 +288,3 @@ div#tab-motion iframe {
     width: 760px;
     margin: 0 auto;
 }
-
